--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>spring-boot-angular2</title>
-    	<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<!-- favicon -->
-		<link rel="shortcut icon" href="assets/img/favicon.ico">
-        <!-- loading css -->
-        <link rel="stylesheet" href="assets/css/loading.css">
-	</head>
-	<body>
-		<!-- display app -->
-		<spring-boot-angular2>
-            <!-- via cssload.net by Pawel Kuna | https://codepen.io/codecalm/ -->
-            <div class="layout center vertical horizontal cssload-dots">
-                <div class="cssload-dot"></div>
-                <div class="cssload-dot"></div>
-                <div class="cssload-dot"></div>
-                <div class="cssload-dot"></div>
-                <div class="cssload-dot"></div>
-            </div>
-        </spring-boot-angular2>
-	</body>
+<html>
+<head>
+    <title>Angular 2 QuickStart</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <!-- 1. Load libraries -->
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <!-- 2. Configure SystemJS -->
+    <script src="systemjs.config.js"></script>
+    <script>
+        System.import('app').catch(function(err){ console.error(err); });
+    </script>
+</head>
+<!-- 3. Display the application -->
+<body>
+<my-app>Loading...</my-app>
+</body>
 </html>
