--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,6 @@
 </head>
 <!-- 3. Display the application -->
 <body>
-<my-app>Loading...</my-app>
+<proto-main>Loading...</proto-main>
 </body>
 </html>
